# special_k

./: .gitignore  .pylintrc  .travis.yml  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml  setup.cfg  setup.py
docs/: advanced_usage.md  getting_started.md  overview.md  usage.md
scripts/: copyright_line_check.sh
special_k/: __init__.py  api.py  exceptions.py  model_interface.py  serializable_model.py  signing.py  utils.py  verifiable_stream.py
special_k/check_gpg_keys/: __init__.py  __main__.py  verify_expiry.py
special_k/model_metadata/: __init__.py  metadata_format_v3.py
special_k/serializers/: __init__.py  base.py  base_serializers.py  registry.py  utils.py
special_k/tests/: __init__.py  test_extras_require.py  test_model_interface.py  test_model_serialization.py  test_registry.py  test_serialization_helpers.py  test_serializers.py  test_signing.py  test_verifiable_stream.py  utils.py
special_k/tests/fake_keys/: keyname-to-fingerprint.json  my.txt.asc  testing.pub.asc  testing.secret.asc  trustdb.txt
